--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="js/jquery-2.1.1.js"></script>
     <script src="js/my_js.js"></script>
+
+    <meta property="og:title" content="Kira's resume">
+    <meta property="og:image" content="img/avatar.png">
+    <meta property="og:description" content="lutra007">
+    <meta property="og:url" content="https://lutra007.github.io/">
 </head>
 
 <body>
