--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
     <script src="js/my_js.js"></script>
 
     <meta property="og:title" content="Kira's resume">
-    <meta property="og:image" content="img/avatar.png">
+    <meta property="og:image" content="url(img/avatar.png)">
     <meta property="og:description" content="lutra007">
     <meta property="og:url" content="https://lutra007.github.io/">
+    <meta property="og:site_name" content="Kira's site">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta itemprop="name" content="Kira's resume" />
+    <meta itemprop="description" content="lutra007" />
+    <meta itemprop="image" content="url(img/avatar.png)" />
 </head>
 
 <body>
