--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="js/jquery-2.1.1.js"></script>
     <script src="js/my_js.js"></script>
-
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="article" />
     <meta property="og:title" content="Kira's resume">
     <meta property="og:image" content="url(img/avatar.png)">
     <meta property="og:description" content="lutra007">
