--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Kira's resume">
-    <meta property="og:image" content="url(img/avatar.png)">
+    <meta property="og:image" content="url(img/night.png)">
     <meta property="og:description" content="lutra007">
     <meta property="og:url" content="https://lutra007.github.io/">
     <meta property="og:site_name" content="Kira's site">
