--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta itemprop="name" content="Kira's resume" />
     <meta itemprop="description" content="lutra007" />
-    <meta itemprop="image" content="url(img/avatar.png)" />
+    <meta itemprop="image" content="url(img/night.png)" />
 </head>
 
 <body>
