--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Kira's resume">
-    <meta property="og:image" content="url(img/night.png)">
+    <meta property="og:image" content="url(img/night.jpg)">
     <meta property="og:description" content="lutra007">
     <meta property="og:url" content="https://lutra007.github.io/">
     <meta property="og:site_name" content="Kira's site">
     <meta name="twitter:card" content="summary_large_image">
     <meta itemprop="name" content="Kira's resume" />
     <meta itemprop="description" content="lutra007" />
-    <meta itemprop="image" content="url(img/night.png)" />
+    <meta itemprop="image" content="url(img/night.jpg)" />
 </head>
 
 <body>
