--- a/html/extra_pages/phage_like_project.html
+++ b/html/extra_pages/phage_like_project.html
@@ -119,7 +119,7 @@
                     <div class="col-sm-9">
                         <h2>SFigure 1. High synteny between phage-like plasmids </h2>
                         <p>
-                            All grouped phages and phage-like plasmids are presented as linear maps (left) and on the dotplots (right). Group references are shown as the upper sequences on the genetic maps and the dotplots. Groups are divided into subgroups of convinient size by the major replicons.
+                            All grouped phages and phage-like plasmids are presented as linear maps (left) and on the dotplots (right). Group references are shown as the upper sequences on the genetic maps and the dotplots. Groups are divided into subgroups of convenient size by the major replicons.
 
                             <br><br>(left) Sequences are labeled with their database ID, GenBank ID and bacterial host. Annotation is shown for the reference and for the functional group discussed in the main text, ARGs, replication regions, IS elements, virulence factors, toxin/antitoxin, tRNA sequences, and conjugation genes. Legend is fixed on the right.
 
